--- a/Final 1/css/style.css
+++ b/Final 1/css/style.css
@@ -28,6 +28,10 @@ input[type="button"],input[type="submit"]{
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
 }
+button {
+    border: none !Important;
+    color: #2fdab8 !Important;
+}
 
 h1,h2,h3,h4,h5,h6{
 	margin:0;
